[gd_scene load_steps=2 format=3 uid="uid://ck5od8fu7rmyw"]

[ext_resource type="Script" path="res://ui/menu/main_menu.gd" id="1_uqawf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqawf")

[node name="MenuListControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
offset_left = 0.53598
offset_top = -0.184021
offset_right = 0.53598
offset_bottom = -0.184021

[node name="VBoxContainer" type="VBoxContainer" parent="MenuListControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MenuListControl/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="SettingButton" type="Button" parent="MenuListControl/VBoxContainer"]
layout_mode = 2
text = "Setting
"

[node name="ExitButton" type="Button" parent="MenuListControl/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="PressedAnyKeyStartLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
text = "请按任意键继续"

[connection signal="pressed" from="MenuListControl/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuListControl/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="MenuListControl/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
